--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://bloodwrath.github.io/administrador-clickstorm",
   "name": "business-management-app",
   "version": "0.1.0",
   "private": true,
@@ -56,6 +57,5 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
     "gh-pages": "^5.0.0"
-  },
-  "homepage": "."
+  }
 }
