--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,29 @@
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
 .pnp.js
+.pnp.cjs
 
-# testing
+# Testing
 /coverage
 
-# production
+# Production
 /build
 /dist
 
-# misc
-.DS_Store
+# Environment variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.env
 
-# debug
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# ide
+# Editor directories and files
 .idea
 .vscode
 *.suo
@@ -32,14 +32,77 @@ yarn-error.log*
 *.sln
 *.sw?
 
-# temp
+# Temporary files
 .temp
 .tmp
+*.tmp
+*.bak
+*.swp
+*~
 
-# firebase
+# Firebase
 .firebase/
 firebase-debug.log
 firebase-debug.*.log
+firebase-debug-*.log
 
-# system files
+# System files
+.DS_Store
 Thumbs.db
+
+# Build files
+.eslintcache
+
+# Dependency directories
+.cache
+.parcel-cache
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variable files
+.env
+.env.test
+.env.production
+
+# parcel-bundler cache (https://parceljs.org/)
+.parcel-cache
+
+# Next.js build output
+.next
+out
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+public
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless/
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
