--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,29 @@
-# Dependencies
+# dependencies
 /node_modules
 /.pnp
 .pnp.js
-.pnp.cjs
 
-# Testing
+# testing
 /coverage
 
-# Production
+# production
 /build
 /dist
 
-# Environment variables
-.env
+# misc
+.DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
-# Debug logs
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories and files
+# ide
 .idea
 .vscode
 *.suo
@@ -32,77 +32,14 @@ yarn-error.log*
 *.sln
 *.sw?
 
-# Temporary files
+# temp
 .temp
 .tmp
-*.tmp
-*.bak
-*.swp
-*~
 
-# Firebase
+# firebase
 .firebase/
 firebase-debug.log
 firebase-debug.*.log
-firebase-debug-*.log
 
-# System files
-.DS_Store
+# system files
 Thumbs.db
-
-# Build files
-.eslintcache
-
-# Dependency directories
-.cache
-.parcel-cache
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variable files
-.env
-.env.test
-.env.production
-
-# parcel-bundler cache (https://parceljs.org/)
-.parcel-cache
-
-# Next.js build output
-.next
-out
-
-# Nuxt.js build / generate output
-.nuxt
-dist
-
-# Gatsby files
-.cache/
-public
-
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless/
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
