--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "business-management-app",
-  "version": "1.0.0",
-  "private": true,
   "homepage": "https://bloodwrath.github.io/administrador-clickstorm",
+  "name": "business-management-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
@@ -17,7 +17,6 @@
     "@types/node": "^16.18.30",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
-    "@types/react-router-dom": "^5.3.3",
     "date-fns": "^2.29.3",
     "firebase": "^9.22.0",
     "react": "^18.2.0",
@@ -56,6 +55,15 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/plugin-syntax-import-assertions": "^7.27.1",
+    "@babel/plugin-transform-react-jsx": "^7.27.1",
+    "@babel/plugin-transform-typescript": "^7.28.0",
+    "@types/react-router-dom": "^5.3.3",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "bfj": "^9.1.2",
+    "customize-cra": "^1.0.0",
+    "gh-pages": "^5.0.0",
+    "react-app-rewired": "^2.2.1"
   }
 }
