añadimos los pedidos y se corrigieron otras cosas

--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.30",
+    "@types/jspdf": "^2.0.0",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "date-fns": "^2.29.3",
     "firebase": "^9.22.0",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
@@ -59,6 +61,7 @@
     "@babel/plugin-syntax-import-assertions": "^7.27.1",
     "@babel/plugin-transform-react-jsx": "^7.27.1",
     "@babel/plugin-transform-typescript": "^7.28.0",
+    "@types/node": "^24.3.2",
     "@types/react-router-dom": "^5.3.3",
     "bfj": "^9.1.2",
     "gh-pages": "^5.0.0"
