--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^9.22.0",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
+    "notistack": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
