--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
+    "@mui/styles": "^6.4.8",
     "@mui/x-data-grid": "^6.11.2",
     "@mui/x-date-pickers": "^6.3.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -27,6 +28,7 @@
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.2.0",
     "recharts": "^2.6.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -64,6 +66,7 @@
     "@babel/plugin-transform-typescript": "^7.28.0",
     "@types/node": "^24.3.2",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-webcam": "^3.0.0",
     "bfj": "^9.1.2",
     "gh-pages": "^5.0.0"
   }
